solving hosting issues with changing their locations

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="container-fluid text-center py-5 bg-primary text-white">
       <img
-        src="../img-src/wmremove-transformed.png"
+        src="./img-src/wmremove-transformed.png"
         class="img-fluid mx-auto d-block"
         alt="DDC Banner"
       />
