--- a/guess-the-movie-from-dialouges.html
+++ b/guess-the-movie-from-dialouges.html
@@ -152,6 +152,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- External JavaScript File -->
-    <script src="../JS/guess-the-movie-from-dialogues.js"></script>
+    <script src="./JS/guess-the-movie-from-dialogues.js"></script>
   </body>
 </html>
