solving hosting issues with changing their locations 2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 Test your movie knowledge by guessing the movie from a single
                 frame!
               </p>
-              <a href="./guess-the-frame.html" class="btn btn-primary mt-auto"
+              <a href="./guess-the-frame.html" alt="DDC Banner Image" class="btn btn-primary mt-auto"
                 >Play Now</a
               >
             </div>
