--- a/guess-the-frame.html
+++ b/guess-the-frame.html
@@ -152,6 +152,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- External JavaScript -->
-    <script src="./JS/guess-the-frame.js"></script>
+    <script src="./guess-the-frame.js"></script>
   </body>
 </html>
