trying to cache and preload the image 2

--- a/guess-the-frame.html
+++ b/guess-the-frame.html
@@ -38,7 +38,7 @@
 
       <!-- Movie Frame (Fixed Size) -->
       <img
-        src="../img-src/kanguva.jpg"
+        src="./img-src/kanguva.jpg"
         id="movie-frame"
         class="img-fluid mb-3 rounded shadow"
         style="max-width: 500px"
