--- a/guess-the-frame.html
+++ b/guess-the-frame.html
@@ -22,15 +22,40 @@
     />
   </head>
   <body class="bg-light">
+    
+    <!-- Rules Modal (Appears on Page Load) -->
+    <div class="modal fade show d-block" id="rulesModal" data-bs-backdrop="static" data-bs-keyboard="false">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content text-center p-4 border-0 shadow-lg">
+          <div class="modal-header border-0">
+            <h3 class="modal-title fw-bold text-primary w-100">🎬 Game Rules 🎬</h3>
+          </div>
+          <div class="modal-body">
+            <ul class="list-unstyled text-dark fs-5">
+              <li>📌 Guess the movie from the given frame.</li>
+              <li>🎭 Click <span class="fw-bold text-success">"Show Answer"</span> to check.</li>
+              <li>🏆 Keep track of scores in the scoreboard.</li>
+              <li>👑 Highest scorer wins the game!</li>
+            </ul>
+          </div>
+          <div class="modal-footer border-0 justify-content-center">
+            <button class="btn btn-lg btn-primary fw-bold px-4 py-2 shadow-sm rounded-pill" onclick="startGame()">
+              🎬 Start Game 
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Header -->
-    <header class="container-fluid text-center py-4 bg-primary text-white">
+    <header class="container-fluid text-center py-4 bg-primary text-white d-none" id="game-header">
       <h1 class="fw-bold display-4">Guess the Frame</h1>
     </header>
 
     <!-- Game Section -->
     <div
       id="game-container"
-      class="container d-flex flex-column align-items-center text-center py-5 min-vh-100"
+      class="container d-flex flex-column align-items-center text-center py-5 min-vh-100 d-none"
     >
       <h3 class="fw-bold text-dark mb-3">
         Can You Guess the Movie from this Frame?
@@ -38,10 +63,10 @@
 
       <!-- Movie Frame (Fixed Size) -->
       <img
-        src="./img-src/kanguva.jpg"
+        src="./img-src/image1.png"
         id="movie-frame"
         class="img-fluid mb-3 rounded shadow"
-        style="max-width: 500px"
+        style="width: 60vw"
         alt="Movie Frame"
       />
 
@@ -67,62 +92,33 @@
 
     <!-- Scoreboard (Bottom Right) -->
     <div
-      class="position-fixed bottom-0 end-0 bg-white shadow rounded p-3 m-3"
+      class="position-fixed bottom-0 end-0 bg-white shadow rounded p-3 m-3 d-none"
+      id="scoreboard"
       style="width: 200px"
     >
       <div class="fw-bold text-center mb-2 fs-5 text-dark">Scoreboard</div>
-      <div class="d-flex justify-content-between align-items-center">
+      <!-- <div class="d-flex justify-content-between align-items-center">
         <span>Abhi</span>
         <span>
-          <button
-            class="btn btn-success btn-sm p-1"
-            onclick="updateScore('abhi', 1)"
-          >
-            +
-          </button>
+          <button class="btn btn-success btn-sm p-1" onclick="updateScore('abhi', 1)">+</button>
           <span id="score-abhi">0</span>
-          <button
-            class="btn btn-danger btn-sm p-1"
-            onclick="updateScore('abhi', -1)"
-          >
-            −
-          </button>
+          <button class="btn btn-danger btn-sm p-1" onclick="updateScore('abhi', -1)">−</button>
         </span>
-      </div>
+      </div> -->
       <div class="d-flex justify-content-between align-items-center mt-2">
         <span>Suraj</span>
         <span>
-          <button
-            class="btn btn-success btn-sm p-1"
-            onclick="updateScore('suraj', 1)"
-          >
-            +
-          </button>
+          <button class="btn btn-success btn-sm p-1" onclick="updateScore('suraj', 1)">+</button>
           <span id="score-suraj">0</span>
-          <button
-            class="btn btn-danger btn-sm p-1"
-            onclick="updateScore('suraj', -1)"
-          >
-            −
-          </button>
+          <button class="btn btn-danger btn-sm p-1" onclick="updateScore('suraj', -1)">−</button>
         </span>
       </div>
       <div class="d-flex justify-content-between align-items-center mt-2">
         <span>Yogi</span>
         <span>
-          <button
-            class="btn btn-success btn-sm p-1"
-            onclick="updateScore('yogi', 1)"
-          >
-            +
-          </button>
+          <button class="btn btn-success btn-sm p-1" onclick="updateScore('yogi', 1)">+</button>
           <span id="score-yogi">0</span>
-          <button
-            class="btn btn-danger btn-sm p-1"
-            onclick="updateScore('yogi', -1)"
-          >
-            −
-          </button>
+          <button class="btn btn-danger btn-sm p-1" onclick="updateScore('yogi', -1)">−</button>
         </span>
       </div>
     </div>
@@ -153,5 +149,16 @@
 
     <!-- External JavaScript -->
     <script src="./guess-the-frame.js"></script>
+
+    <script>
+      // Function to start the game after rules modal
+      function startGame() {
+        document.getElementById("rulesModal").classList.add("d-none");
+        document.getElementById("game-header").classList.remove("d-none");
+        document.getElementById("game-container").classList.remove("d-none");
+        document.getElementById("scoreboard").classList.remove("d-none");
+      }
+    </script>
+
   </body>
 </html>
