--- a/guess-the-frame.html
+++ b/guess-the-frame.html
@@ -4,22 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Guess the Frame - DDC Games</title>
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
     ></script>
-    <link
-      rel="shortcut icon"
-      href="./img-src/channels4_profile.jpg"
-      type="image/x-icon"
-    />
+
+    <link rel="shortcut icon" href="./img-src/channels4_profile.jpg" type="image/x-icon" />
   </head>
   <body class="bg-light">
     
@@ -53,22 +49,20 @@
     </header>
 
     <!-- Game Section -->
-    <div
-      id="game-container"
-      class="container d-flex flex-column align-items-center text-center py-5 min-vh-100 d-none"
-    >
+    <div id="game-container" class="container d-flex flex-column align-items-center text-center py-5 min-vh-100 d-none">
       <h3 class="fw-bold text-dark mb-3">
         Can You Guess the Movie from this Frame?
       </h3>
 
-      <!-- Movie Frame (Fixed Size) -->
-      <img
-        src="./img-src/image1.png"
-        id="movie-frame"
-        class="img-fluid mb-3 rounded shadow"
-        style="width: 60vw"
-        alt="Movie Frame"
-      />
+      <!-- Movie Frame (Consistent Size) -->
+      <div class="w-75">
+        <img
+          src="./img-src/image1.png"
+          id="movie-frame"
+          class="img-fluid rounded shadow w-100 object-fit-cover"
+          alt="Movie Frame"
+        />
+      </div>
 
       <!-- Answer Section -->
       <p id="answer" class="fw-bold text-success fs-4 d-none">
@@ -76,35 +70,19 @@
       </p>
 
       <!-- Buttons -->
-      <div class="d-flex gap-3">
+      <div class="d-flex gap-3 w-75 mt-5">
         <button class="btn btn-success btn-lg w-50" onclick="showAnswer()">
           Show Answer
         </button>
-        <button
-          class="btn btn-primary btn-lg w-50"
-          id="next-frame-btn"
-          onclick="nextFrame()"
-        >
+        <button class="btn btn-primary btn-lg w-50" id="next-frame-btn" onclick="nextFrame()">
           Next Frame
         </button>
       </div>
     </div>
 
-    <!-- Scoreboard (Bottom Right) -->
-    <div
-      class="position-fixed bottom-0 end-0 bg-white shadow rounded p-3 m-3 d-none"
-      id="scoreboard"
-      style="width: 200px"
-    >
+    <!-- Scoreboard -->
+    <div id="scoreboard" class="position-fixed bottom-0 end-0 bg-white shadow rounded p-3 m-4 d-none" style="width: 250px">
       <div class="fw-bold text-center mb-2 fs-5 text-dark">Scoreboard</div>
-      <!-- <div class="d-flex justify-content-between align-items-center">
-        <span>Abhi</span>
-        <span>
-          <button class="btn btn-success btn-sm p-1" onclick="updateScore('abhi', 1)">+</button>
-          <span id="score-abhi">0</span>
-          <button class="btn btn-danger btn-sm p-1" onclick="updateScore('abhi', -1)">−</button>
-        </span>
-      </div> -->
       <div class="d-flex justify-content-between align-items-center mt-2">
         <span>Suraj</span>
         <span>
@@ -124,11 +102,7 @@
     </div>
 
     <!-- Final Score Table -->
-    <div
-      id="final-scoreboard"
-      class="position-absolute top-50 start-50 translate-middle bg-white p-4 rounded shadow d-none text-center"
-      style="width: 400px"
-    >
+    <div id="final-scoreboard" class="position-absolute top-50 start-50 translate-middle bg-white p-4 rounded shadow d-none text-center" style="width: 400px">
       <h3 class="mb-3">Final Scores</h3>
       <table class="table table-bordered">
         <thead>
@@ -143,9 +117,6 @@
         Back to Homepage
       </button>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- External JavaScript -->
     <script src="./guess-the-frame.js"></script>
