--- a/guess-the-movie-from-dialouges.html
+++ b/guess-the-movie-from-dialouges.html
@@ -7,14 +7,8 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link
       rel="shortcut icon"
       href="./img-src/channels4_profile.jpg"
@@ -36,15 +30,13 @@
         4️⃣ Click "Next Dialogue" to get a new challenge. <br />
         5️⃣ Score points based on correct answers!
       </p>
-      <button class="btn btn-success btn-lg mt-3" onclick="startGame()">
+      <button
+        class="btn btn-lg btn-primary fw-bold px-4 py-2 shadow-sm rounded-pill"
+        onclick="startGame()"
+      >
         🎬 Start Game
       </button>
     </div>
-
-    <!-- Header -->
-    <header class="container-fluid text-center py-4 bg-primary text-white d-none" id="game-header">
-      <h1 class="fw-bold display-4">Guess the Movie from Dialogues</h1>
-    </header>
 
     <!-- Game Section -->
     <div
@@ -59,17 +51,23 @@
       <div
         id="dialogue-box"
         class="bg-light p-4 rounded shadow text-dark fs-5 fw-bold text-center w-50"
+        style="padding: 20px; margin: 20px auto; line-height: 1.6"
       >
-        "I'll be back!"
+        ओके बच्चालोग, <br />
+        ठीक से पढने का, <br />
+        टीचर को तंग नहीं करने का,<br />
+        जो भी टीचर को तंग किया, <br />
+        उसको अंदर करेगा में,<br />
+        कुल्फ़ीवाला है में.
       </div>
 
       <!-- Answer Section -->
-      <p id="answer" class="fw-bold text-success fs-4 d-none">
+      <p id="answer" class="fw-bold text-success fs-4 d-none my-3">
         The movie is: <span id="movie-name"></span>
       </p>
 
       <!-- Buttons -->
-      <div class="d-flex gap-3 mt-3">
+      <div class="d-flex gap-5 w-50 mt-3">
         <button class="btn btn-success btn-lg w-50" onclick="showAnswer()">
           Show Answer
         </button>
@@ -85,33 +83,46 @@
 
     <!-- Scoreboard (Bottom Right) -->
     <div
-      class="position-fixed bottom-0 end-0 bg-white shadow rounded p-3 m-3 d-none"
+      class="position-fixed bottom-0 end-0 bg-warning shadow rounded p-3 m-3 d-none"
       id="scoreboard"
-      style="width: 200px"
+      style="width: 350px"
     >
       <div class="fw-bold text-center mb-2 fs-5 text-dark">Scoreboard</div>
-      <!-- <div class="d-flex justify-content-between align-items-center">
-        <span>Abhi</span>
-        <span>
-          <button class="btn btn-success btn-sm p-1" onclick="updateScore('abhi', 1)">+</button>
-          <span id="score-abhi">0</span>
-          <button class="btn btn-danger btn-sm p-1" onclick="updateScore('abhi', -1)">−</button>
-        </span>
-      </div> -->
-      <div class="d-flex justify-content-between align-items-center mt-2">
+
+      <div class="d-flex justify-content-around align-items-center mt-2">
         <span>Suraj</span>
         <span>
-          <button class="btn btn-success btn-sm p-1" onclick="updateScore('suraj', 1)">+</button>
+          <button
+            class="btn btn-success btn-sm px-3"
+            onclick="updateScore('suraj', 1)"
+          >
+            +
+          </button>
           <span id="score-suraj">0</span>
-          <button class="btn btn-danger btn-sm p-1" onclick="updateScore('suraj', -1)">−</button>
+          <button
+            class="btn btn-danger btn-sm px-3"
+            onclick="updateScore('suraj', -1)"
+          >
+            −
+          </button>
         </span>
       </div>
-      <div class="d-flex justify-content-between align-items-center mt-2">
+      <div class="d-flex justify-content-around align-items-center mt-2">
         <span>Yogi</span>
         <span>
-          <button class="btn btn-success btn-sm p-1" onclick="updateScore('yogi', 1)">+</button>
+          <button
+            class="btn btn-success btn-sm px-3"
+            onclick="updateScore('yogi', 1)"
+          >
+            +
+          </button>
           <span id="score-yogi">0</span>
-          <button class="btn btn-danger btn-sm p-1" onclick="updateScore('yogi', -1)">−</button>
+          <button
+            class="btn btn-danger btn-sm px-3"
+            onclick="updateScore('yogi', -1)"
+          >
+            −
+          </button>
         </span>
       </div>
     </div>
@@ -136,15 +147,11 @@
       </button>
     </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
     <!-- JavaScript -->
     <script>
       function startGame() {
         document.getElementById("rule-box").classList.add("d-none");
         document.getElementById("game-container").classList.remove("d-none");
-        document.getElementById("game-header").classList.remove("d-none");
         document.getElementById("scoreboard").classList.remove("d-none");
       }
     </script>
